force-app/main/default/objects/webservicer__Mapping__c/webservicer__Mapping__c.object-meta.xml
<CustomObject>
    <label>Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>