force-app/main/default/objects/webservicer__Mapping__c/fields/webservicer__Function_Name__c.field-meta.xml
<CustomField>
    <fullName>webservicer__Function_Name__c</fullName>
    <label>Function Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>