force-app/main/default/objects/webservicer__Mapping__c/fields/webservicer__ObjectSFDC_INPUT__c.field-meta.xml
<CustomField>
    <fullName>webservicer__ObjectSFDC_INPUT__c</fullName>
    <description>Object serving as input to SAP</description>
    <label>SFDC Input Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>