force-app/main/default/objects/webservicer__Mapping__c/fields/webservicer__ObjectSFDC_OUTPUT__c.field-meta.xml
<CustomField>
    <fullName>webservicer__ObjectSFDC_OUTPUT__c</fullName>
    <description>Object to which SAP response is mapped</description>
    <label>SFDC Output Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>