force-app/main/default/objects/webservicer__Mapping__c/fields/webservicer__Source_WSDL__c.field-meta.xml
<CustomField>
    <fullName>webservicer__Source_WSDL__c</fullName>
    <label>Source WSDL</label>
    <referenceTo>webservicer__WSDL__c</referenceTo>
    <relationshipLabel>Mappings</relationshipLabel>
    <relationshipName>Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>